--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					
 					<!-- LOGO -->
 					<div class="logo pull-left">
-						<a href="index.html" ><span class="b1"><img src="\images\X3.png." width="50" height="50"></span><span class="b2">|</span><span class="b3">N</span><span class="b4">e</span><span class="b5">l</span><span class="b6">c</span><span class="b7">o</span><span class="b8">m</span><span class="b9">e</span></a>
+						<a href="index.html" ><span class="b1"><img src="\images\X3.png." width="50" height="50"></span><span class="b2">X</span><span class="b3">N</span><span class="b4">e</span><span class="b5">l</span><span class="b6">c</span><span class="b7">o</span><span class="b8">m</span><span class="b9">e</span></a>
 					</div><!-- //LOGO -->
 					
 					<!-- SEARCH FORM -->
